# coScheduling

./: .clang-format  .gitignore  CMakeLists.txt  analyzeBeatnikCoScheduling.ipynb  generateCombinations.py  generateRunScripts.py  generateRunScriptsInhibitor.py  remove_not_minife.py  sampleProg.slurm  sampleProg1.sh  sampleProg2.sh  submitBatches.sh  test.sh
LogGOPSim/src/: CMakeLists.txt
LogGOPSim/src/LogGOPSim/: loggopsim_cmdline.c  txt2bin.cpp  txt2bin_cmdline.c
LogGOPSim/src/Schedgen/: schedgen_cmdline.c
LogGOPSim/src/liballprof2/: gensem.py
apps/beatnik/examples/: rocketrig.cpp
apps/beatnik/src/: ZModel.hpp
apps/examinimd/input/: createInputs.sh  in_100_0.1.lj  in_100_0.15.lj  in_100_0.2.lj  in_100_0.25.lj  in_100_0.3.lj  in_100_0.35.lj  in_100_0.4.lj  in_100_0.45.lj  in_100_0.5.lj  in_100_0.55.lj  in_100_0.6.lj  in_100_0.65.lj  in_100_0.7.lj  in_100_0.75.lj  in_100_0.8.lj  in_100_0.85.lj  in_100_0.9.lj  in_10_0.1.lj  in_10_0.15.lj  in_10_0.2.lj  in_10_0.25.lj  in_10_0.3.lj  in_10_0.35.lj  in_10_0.4.lj  in_10_0.45.lj  in_10_0.5.lj  in_10_0.55.lj  in_10_0.6.lj  in_10_0.65.lj  in_10_0.7.lj  in_10_0.75.lj  in_10_0.8.lj  in_10_0.85.lj  in_10_0.9.lj  in_110_0.1.lj  in_110_0.15.lj  in_110_0.2.lj  in_110_0.25.lj  in_110_0.3.lj  (+219 more)
apps/examinimd/src/: CMakeLists.txt  examinimd.h  main.cpp
apps/fiesta/: CMakeLists.txt
apps/fiesta/input/: createInputs.sh  fiesta_100_105.lua  fiesta_100_110.lua  fiesta_100_125.lua  fiesta_100_130.lua  fiesta_100_135.lua  fiesta_100_140.lua  fiesta_100_15.lua  fiesta_100_150.lua  fiesta_100_155.lua  fiesta_100_160.lua  fiesta_100_165.lua  fiesta_100_170.lua  fiesta_100_175.lua  fiesta_100_185.lua  fiesta_100_190.lua  fiesta_100_195.lua  fiesta_100_200.lua  fiesta_100_205.lua  fiesta_100_35.lua  fiesta_100_40.lua  fiesta_100_55.lua  fiesta_100_65.lua  fiesta_100_90.lua  fiesta_10_10.lua  fiesta_10_100.lua  fiesta_10_105.lua  fiesta_10_110.lua  fiesta_10_115.lua  fiesta_10_120.lua  fiesta_10_125.lua  fiesta_10_130.lua  fiesta_10_135.lua  fiesta_10_140.lua  fiesta_10_145.lua  fiesta_10_15.lua  fiesta_10_150.lua  fiesta_10_155.lua  fiesta_10_160.lua  fiesta_10_165.lua  (+836 more)
apps/fiesta/inputMultiCore/: createInputs.sh  fiesta_100_10.lua  fiesta_100_100.lua  fiesta_100_115.lua  fiesta_100_120.lua  fiesta_100_145.lua  fiesta_100_180.lua  fiesta_100_20.lua  fiesta_100_210.lua  fiesta_100_25.lua  fiesta_100_30.lua  fiesta_100_45.lua  fiesta_100_50.lua  fiesta_100_60.lua  fiesta_100_70.lua  fiesta_100_75.lua  fiesta_100_80.lua  fiesta_100_85.lua  fiesta_100_95.lua  fiesta_120_10.lua  fiesta_120_100.lua  fiesta_120_105.lua  fiesta_120_110.lua  fiesta_120_115.lua  fiesta_120_120.lua  fiesta_120_125.lua  fiesta_120_130.lua  fiesta_120_135.lua  fiesta_120_140.lua  fiesta_120_145.lua  fiesta_120_15.lua  fiesta_120_150.lua  fiesta_120_155.lua  fiesta_120_160.lua  fiesta_120_165.lua  fiesta_120_170.lua  fiesta_120_175.lua  fiesta_120_180.lua  fiesta_120_185.lua  fiesta_120_190.lua  (+733 more)
apps/fiesta/src/: main.cpp
apps/lammps/: runCommand.sh
apps/lammps/src/: main.cpp
apps/lulesh/kokkos-no-uvm/: CMakeLists.txt  lulesh.cc
apps/miniFE/kokkos/src/: Makefile  (+6 more)
debug_notes/: cpu_affinity_example.txt  cpu_affinity_example_64Procs.txt
multiAllreduce/: multiAllreduce.cpp
networkInhibitor/: networkInhib.cpp
pingPong/: pingPong.cpp
(+4 files in other folders)
